--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -12,5 +12,9 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: false
+  sql:
+    init:
+      schema-locations: classpath*:db/schema.sql
+      data-locations: classpath*:db/data.sql
 server:
   port: 8080
