--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,19 +20,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: tj-actions/install-postgresql@v3.1.1
-      - name: install-postgresql
-        run: echo "Postgresql"
+      - name: Setup PostgreSQL
+        # You may pin to the exact commit or the version.
+        # uses: Harmon758/postgresql-action@0be19fa37850b22cb4c9bbf28a03abbf44abd863
+        uses: Harmon758/postgresql-action@v1.0.0
         with:
-          postgresql-version: 16
-
+          # Version of PostgreSQL to use
+          # POSTGRES_DB - name for the default database that is created
+          postgresql db: "Spring-Boot-Testing"# optional, default is
+          # POSTGRES_USER - create the specified user with superuser power
+          postgresql user: "root" # optional, default is
+          # POSTGRES_PASSWORD - superuser password
+          postgresql password: "root" # optional, default is
 
       - uses: actions/checkout@v4
+        
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+          
       - name: Build with Maven
         run: mvn -B package --file pom.xml
